# manga-grabber

./: .gitignore  LICENSE  README.md  mangalib.py  pyproject.toml
.github/workflows/: tests.yml
manga_grabber/: __init__.py  __main__.py  base.py  exceptions.py  export.py  mangalib.py  ranobehub.py  usagi.py  utils.py
tests/: export_test.py  hentailib_api_test.py  mangalib_api_test.py  ranobelib_api_test.py  usagi_one_test.py
