[project]
name = "manga-grabber"
description = "A simple manga/ranobe downloader written in Python"
dynamic = ["version"]
authors = [
    {name = "qwertyadrian", email = "me@qwertyadrian.ru"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "fpdf2",
    "pillow",
    "natsort",
    "fonttools",
]

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
types-beautifulsoup4 = "*"
types-fpdf2 = "*"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
