[project]
name = "manga-grabber"
description = "A simple manga/ranobe downloader written in Python"
dynamic = ["version"]
authors = [
    {name = "qwertyadrian", email = "me@qwertyadrian.ru"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "fpdf2",
    "pillow",
    "natsort",
    "fonttools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
types-beautifulsoup4 = "*"
types-fpdf2 = "*"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
bump = true
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
